// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jenkins basic test process records from all streams 1`] = `
Array [
  "Processed 6 records",
  "Processed records by stream: {\\\\\\"mytestsource__jenkins__builds\\\\\\":4,\\\\\\"mytestsource__jenkins__jobs\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 17 records",
  "Would write records by model: {\\\\\\"cicd_Build\\\\\\":4,\\\\\\"cicd_BuildCommitAssociation\\\\\\":1,\\\\\\"cicd_Organization\\\\\\":6,\\\\\\"cicd_Pipeline\\\\\\":6}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`jenkins process records from all streams with commits 1`] = `
Array [
  "Processed 6 records",
  "Processed records by stream: {\\\\\\"mytestsource__jenkins__builds\\\\\\":4,\\\\\\"mytestsource__jenkins__jobs\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 18 records",
  "Would write records by model: {\\\\\\"cicd_Build\\\\\\":4,\\\\\\"cicd_BuildCommitAssociation\\\\\\":1,\\\\\\"cicd_Organization\\\\\\":6,\\\\\\"cicd_Pipeline\\\\\\":6,\\\\\\"vcs_Commit\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;
